--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,8 +36,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".UserListActivity">
+        <activity android:name=".UserActivity">
         </activity>
+        <activity android:name=".DoctorActivity"/>
 
         <activity android:name=".KeppAliveActivity" android:theme="@style/keepAliveActivityStyle"/>
 
