--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,7 +81,11 @@ dependencies {
 //    gson
     compile 'com.google.code.gson:gson:2.8.1'
 
-
-
     compile 'com.qmuiteam:qmui:1.0.0'
+
+    compile 'com.github.dkzwm:SmoothRefreshLayout:1.4.4.1'
+
+    compile 'com.github.bumptech.glide:glide:4.0.0'
+    compile 'com.android.support:support-v4:25.3.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
 }
