--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,7 @@ android {
                 cppFlags ""
             }
         }
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -59,33 +60,35 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.wilddog.client:wilddog-video-android:2.0.2'
-    compile 'com.wilddog.client:wilddog-auth-android:2.0.6'
-    compile 'com.wilddog.client:wilddog-sync-android:2.3.5'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    testCompile 'junit:junit:4.12'
 
     //    rxjava
+    //    rxandroid
+    //    retrofit
+    //    compile 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
+    //    gson
+
+
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.wilddog.client:wilddog-video-android:2.0.4'
+    compile 'com.wilddog.client:wilddog-auth-android:2.0.6'
+    compile 'com.wilddog.client:wilddog-sync-android:2.3.6'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.jakewharton:butterknife:8.8.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.0'
-//    rxandroid
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-//    retrofit
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-//    compile 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
-    compile "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
-//    gson
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     compile 'com.google.code.gson:gson:2.8.1'
-
     compile 'com.qmuiteam:qmui:1.0.0'
-
-    compile 'com.github.dkzwm:SmoothRefreshLayout:1.4.4.1'
-
+    compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.3'
     compile 'com.github.bumptech.glide:glide:4.0.0'
     compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.android.support:support-vector-drawable:25.3.1'
+    compile 'pub.devrel:easypermissions:0.4.3'
+    compile 'com.github.yalantis:ucrop:2.2.1-native'
+    testCompile 'junit:junit:4.12'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
 }
