--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.zd.wilddogdemo">
 
-    <uses-feature android:name="android.hardware.camera" />
-    <uses-feature android:name="android.hardware.camera.autofocus" />
+    <uses-feature android:name="android.hardware.camera"/>
+    <uses-feature android:name="android.hardware.camera.autofocus"/>
     <uses-feature
         android:glEsVersion="0x00020000"
-        android:required="true" />
+        android:required="true"/>
 
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -20,6 +20,9 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
     <uses-permission android:name="android.permission.READ_PROFILE"/>
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.GET_TASKS"/>
 
     <application
         android:name=".DemoApplication"
@@ -36,21 +39,56 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ui.UserActivity">
-        </activity>
-        <activity android:name=".ui.DoctorActivity"/>
+        <activity android:name=".ui.DoctorActivity"
+            android:launchMode="singleTop"/>
+        <activity
+            android:name=".ui.KeppAliveActivity"
+            android:theme="@style/keepAliveActivityStyle"/>
 
-        <activity android:name=".ui.KeppAliveActivity" android:theme="@style/keepAliveActivityStyle"/>
+        <activity android:name=".ui.MainActivity"
+            android:launchMode="singleTop"/>
+        <activity
+            android:name=".ui.DialActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:launchMode="singleTop"
+            android:label="@string/title_activity_dial"
+            android:theme="@style/FullscreenTheme">
+        </activity>
+        <activity
+            android:name=".ui.VideoReceiverActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_video_receiver"
+            android:theme="@style/FullscreenTheme">
+        </activity>
+        <activity
+            android:name="com.yalantis.ucrop.UCropActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+        <activity
+            android:name=".ui.RegisterActivity"
+            android:launchMode="singleTop"
+            android:label="@string/title_activity_register">
+        </activity>
 
         <receiver android:name="com.wilddog.client.receiver.WilddogAuthCastReceiver">
             <intent-filter>
-                <action android:name="com.wilddog.wilddogauth.signinsuccess" />
-                <action android:name="com.wilddog.wilddogauth.signoutsuccess" />
+                <action android:name="com.wilddog.wilddogauth.signinsuccess"/>
+                <action android:name="com.wilddog.wilddogauth.signoutsuccess"/>
             </intent-filter>
         </receiver>
-        <receiver android:name=".broadreceiver.KeepAliveBroadcastReceiver" android:enabled="true" android:exported="true"/>
+        <receiver
+            android:name=".broadreceiver.KeepAliveBroadcastReceiver"
+            android:enabled="true"
+            android:exported="true"/>
 
-        <service android:name=".service.WilddogVideoService" android:enabled="true"/>
+        <service android:name=".service.DialService"/>
+        <service android:name=".service.VideoReceiverService"/>
+        <!--<service-->
+            <!--android:name=".service.AliveService"-->
+            <!--android:enabled="true"-->
+            <!--android:exported="true">-->
+        <!--</service>-->
+
     </application>
 
 </manifest>
