修复图片相关问题

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.zd.wilddogdemo.utils.DemoAppGlideModule"
+            android:value="DemoAppGlideModule"/>
         <activity android:name=".ui.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -39,9 +42,6 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ui.doctor.DoctorActivity"
-            android:launchMode="singleTop"/>
         <activity
             android:name=".ui.KeppAliveActivity"
             android:theme="@style/keepAliveActivityStyle"/>
@@ -53,12 +53,6 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_dial"
             android:launchMode="singleTop"
-            android:theme="@style/FullscreenTheme">
-        </activity>
-        <activity
-            android:name=".ui.doctor.VideoReceiverActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/title_activity_video_receiver"
             android:theme="@style/FullscreenTheme">
         </activity>
         <activity
